# warpseek

./: .gitignore  BUILD_SUCCESS.md  Cargo.toml  DESKTOP_GUI_ENHANCED.md  GUI_ENHANCEMENTS.md  README.md  USAGE.md  build_all.sh  build_simple.sh  build_terminal.sh  build_working.sh  create_release.sh  install.sh  tauri.conf.json
scripts/: generate_icons.sh
src/: gui.rs.old  gui_simple.rs  lib.rs  main_broken.rs  main_simple.rs  search.rs
